# metricsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  semantic-layer.md
examples/: quickstart.py
examples/data/: customers.csv  orders.csv
examples/semantic/: customers.yml  orders.yml
metricsmith/: __init__.py  _time.py  cli.py  compiler.py  errors.py  graph.py  model.py  query.py  runtime.py  seed.py
tests/: conftest.py  test_cli.py  test_compiler.py  test_model.py  test_runtime.py  test_time.py
