[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metricsmith"
version = "0.2.0"
description = "A small semantic metrics layer that compiles YAML metric definitions to SQL."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rashmit Pawar", email = "work.rashmit@gmail.com" }]
keywords = ["metrics", "semantic layer", "sql", "analytics engineering", "sqlglot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlglot>=20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
metricsmith = "metricsmith.cli:main"

[project.urls]
Homepage = "https://github.com/R4SHM1T/metricsmith"
Issues = "https://github.com/R4SHM1T/metricsmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["metricsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
